test/negative/602_array_dim_mismatch.fx
// expect: array literal
val a = [1, [2, 3], 4]
println(a)
